pamc/src/tests/sample_code/should_fail/empty_parens/empty_call_params.ph
type U {
    .U: U,
}

let foo = fun foo(x: U): U { U.U };

let bar = foo();
